--- a/workspace/docker-compose.yml
+++ b/workspace/docker-compose.yml
@@ -7,27 +7,26 @@ services:
 
   otrs:
     container_name: otrs
+    build:
+      context: build
+      args:
+        OTRS_USER: ${OTRS_USER}
+        OTRS_GROUP: ${OTRS_GROUP}
     image: otrs:${OTRS_VERSION}
-    # env_file: .env
-    # environment:
-    #   - OTRS_DB_HOST=mariadb
-    #   - OTRS_DB_NAME=otrs
-    #   - OTRS_DB_USER=otrs
-    #   - OTRS_DB_PASSWORD=mariadb12315
-    #   - MYSQL_ROOT_PASSWORD=admin12315
-    #   - OTRS_DB_PORT=3306
-    #   - OTRS_ROOT_PASSWORD=otrs12315
-    #   # yes/no/restore
-    #   - OTRS_INSTALL=yes
-    #   - OTRS_DROP_DATABASE=no
-    #   - OTRS_HOSTNAME=otrs-qwert
-    #   # otrs root name: root@localhost
-    #   - OTRS_LANGUAGE=zh_CN
-    #   - OTRS_TIMEZONE=Asia/Shanghai
-    #   - SHOW_OTRS_LOGO=yes
+    environment:
+      - OTRS_USER=${OTRS_USER}
+      - OTRS_GROUP=${OTRS_GROUP}
+      - MYSQL_ROOT_PASSWORD=mariadb12315
+      - OTRS_DB_HOST=mariadb
+      - OTRS_DB_PORT=3306
+      - OTRS_DB_INIT=true
+      - OTRS_DB_NAME=otrs
+      - OTRS_DB_USER=otrs
+      - OTRS_DB_PASSWORD=otrs12315
     volumes:
       # - otrs_backups:/var/otrs/backups
       - /etc/localtime:/etc/localtime:ro
+      - ./build/run.sh:/run.sh
     ports:
       - 8080:80
 
@@ -35,8 +34,10 @@ services:
     image: juanluisbaptiste/otrs-mariadb:latest
     container_name: mariadb
     environment:
-      - MYSQL_ROOT_PASSWORD=admin12315
+      - MYSQL_ROOT_PASSWORD=mariadb12315
     expose:
       - 3306
+    ports:
+      - 3306:3306
     volumes:
       - /etc/localtime:/etc/localtime:ro
