--- a/workspace/docker-compose.yml
+++ b/workspace/docker-compose.yml
@@ -28,11 +28,12 @@ services:
       - ./volumes/run_otrs.sh:/run_otrs.sh
       - ./volumes/run_apache.sh:/run_apache.sh
       - ./volumes/supervisord.conf:/supervisord.conf
+      - ./volumes/otrs_host.conf:/etc/apache2/sites-available/otrs_host.conf
       - ./volumes/Config.pm:/opt/otrs/Kernel/Config.pm
       - ./volumes/apache2-perl-startup.pl:/opt/otrs/scripts/apache2-perl-startup.pl
     command: /usr/bin/supervisord -c /supervisord.conf
     ports:
-      - 8080:80
+      - 8080:8080
       - 9001:9001
 
   mariadb:
