--- a/workspace/volumes/supervisord.conf
+++ b/workspace/volumes/supervisord.conf
@@ -10,11 +10,11 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:apache]
-command=/bin/bash /run_apache.sh
+command=/bin/bash /run-apache.sh
 loglevel=info
 redirect_stderr=true
 
 [program:otrs]
-command=/bin/bash /run_otrs.sh
+command=/bin/bash /run-otrs.sh
 loglevel=info
 redirect_stderr=true
