--- a/workspace/docker-compose.yml
+++ b/workspace/docker-compose.yml
@@ -27,6 +27,7 @@ services:
       - ./volumes/init-db.sql:/init-db.sql
       - ./volumes/run-otrs.sh:/run-otrs.sh
       - ./volumes/run-apache.sh:/run-apache.sh
+      # - ./volumes/mariadb/my.client.conf:/etc/mysql/my.cnf
       - ./volumes/apache2/ports.conf:/etc/apache2/ports.conf
       - ./volumes/apache2/sites-available/000-default.conf:/etc/apache2/sites-available/000-default.conf
     command: /usr/bin/supervisord -c /supervisord.conf
@@ -44,4 +45,4 @@ services:
     env_file: .env
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - ./volumes/mariadb/my.conf:/etc/mysql/my.cnf
+      - ./volumes/mariadb/my.server.conf:/etc/mysql/my.cnf
